--- a/app/index.pug
+++ b/app/index.pug
@@ -1,9 +1,9 @@
 doctype html
-html(lang='en', ng-app='statesApp')
+html(lang="en", ng-app="statesApp")
   head
-    meta(charset='utf-8')
-    title Angular states and auth
-    link(rel='stylesheet', href='bundles/styles.css')  
+    meta(charset="utf-8")
+    title Приложение для агентов по продажам
+    link(rel="stylesheet", href="bundles/styles.css")  
   body
     ui-view
-    script(src='bundles/scripts.js')
+    script(src="bundles/scripts.js")
