* massive code refactoring * optimized project structure

--- a/app/map/map.template.pug
+++ b/app/map/map.template.pug
@@ -1,6 +1,6 @@
 .container-fluid.header
     .col-xs-11
-        h3 Добро пожаловать, {{$ctrl.userInfo.username}}
+        h3 Добро пожаловать, {{$ctrl.userData.username}}
     .col-xs-1
         a.btn.btn-default(ng-click="$ctrl.logout()") Выйти
 .container-fluid.main
