--- a/app/app.css
+++ b/app/app.css
@@ -1,30 +1,92 @@
-.header {
+/* login page */
+
+.login-header {
     height: 70px;
     padding-top: 20px;
-}
-
-.alert {
-    text-align: center;
 }
 
 .form-control {
     margin-bottom: 6px;
 }
 
-.btn-crud {
-    margin-right: 9px;
+/* header part */
+
+.header {
+    background-color: rgba(230, 230, 180, .4);
+    box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba(0,0,0,.06);
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
+.header-username {
+    flex: 1 0 auto;
+    margin-left: 10px;
+}
+
+.header-logout {
+    flex-basis: content;
+    margin-right: 10px;
+}
+
+/* main part */
+
+.main {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px;
+    justify-content: center;
+}
+
+.svg-wrapper {
+    flex-basis: content;
+}
+
+.form-wrapper {
+    flex: 1 0 auto;
+    max-width: 800px;
+    padding-left: 20px;
+}
+
+/* form part */
+
+.form-container > li {
+    display: flex;
+    margin-top: 10px;
+}
+
+.form-container > li > label {
+    flex: 0 0 260px;
+}
+
+.form-container > li > input {
+    flex: 0 1 auto;
+}
+
+.form-buttons {
+    justify-content: space-between;
+}
+
+.form-buttons .btn {
+    flex: 0 1 20%;
+}
+
+/* fixes */
 
 #SVG {
-    height: 1000px;
-    width: 1000px;
     position: absolute;
-    left: 0px;
-    top: 0px;
 }
 
-#svgMap {
-    position: absolute;
-    left: 0px;
-    top: 0px;
+body {
+    overflow-x: hidden;
+}
+
+ul {
+    padding-left: 0;
+}
+
+.alert-success {
+    text-align: center;
 }
