--- a/app/map/map.template.pug
+++ b/app/map/map.template.pug
@@ -1,38 +1,30 @@
-.container-fluid.header
-    .col-xs-11
-        h3 Добро пожаловать, {{$ctrl.userData.username}}
-    .col-xs-1
-        a.btn.btn-default(ng-click="$ctrl.logout()") Выйти
-.container-fluid.main
-    .container.col-xs-7
-        .container.wrapper
-            object#svgMap(data="map/tutzing.svg", type="image/svg+xml")
-            svg#SVG
-    .container.col-xs-5
-        form.form-horizontal(name="currentForm", novalidate="")
-            .form-group
-                label.col-xs-6.control-label(for="inputName") Наименование торговой точки
-                .col-xs-6
+.header
+    h4.header-username Добро пожаловать, {{$ctrl.userData.username}}
+    a.header-logout.btn.btn-default(ng-click="$ctrl.logout()") Выход
+.main
+    .svg-wrapper
+        svg#SVG
+        object#svgMap(data="map/tutzing.svg", type="image/svg+xml")
+    .form-wrapper
+        form(name="currentForm", novalidate="")
+            ul.form-container
+                li
+                    label(for="inputName") Наименование торговой точки
                     input#inputName.form-control(type="text", required="", ng-model="$ctrl.current.name")
-            .form-group
-                label.col-xs-6.control-label(for="inputAmount") Количество товара для поставки
-                .col-xs-6
+                li
+                    label(for="inputAmount") Количество товара для поставки
                     input#inputAmount.form-control(type="number", required="", ng-model="$ctrl.current.amount")
-            .form-group
-                label.col-xs-6.control-label(for="inputX") Координата x
-                .col-xs-6
+                li
+                    label(for="inputX") Координата x
                     input#inputX.form-control(type="number", required="", ng-model="$ctrl.current.x")
-            .form-group
-                label.col-xs-6.control-label(for="inputY") Координата y
-                .col-xs-6
+                li
+                    label(for="inputY") Координата y
                     input#inputY.form-control(type="number", required="", ng-model="$ctrl.current.y")
-            .form-group
-                .col-xs-offset-2.col-xs-4
-                    .alert.alert-success(role="alert", ng-show="$ctrl.messages['added']") Торговая точка добавлена!
-                    .alert.alert-success(role="alert", ng-show="$ctrl.messages['edited']") Торговая точка изменена!
-                    .alert.alert-success(role="alert", ng-show="$ctrl.messages['deleted']") Торговая точка удалена!
-                .col-xs-6
-                    input.btn.btn-default.btn-crud(type="submit", value="Добавить", ng-disabled="currentForm.$invalid||currentForm.$pristine", ng-click="$ctrl.add()")
-                    input.btn.btn-default.btn-crud(type="button", value="Изменить", ng-disabled="currentForm.$invalid||!$ctrl.currentIndex", ng-click="$ctrl.edit()")
-                    input.btn.btn-default.btn-crud(type="button", value="Удалить", ng-disabled="!($ctrl.currentIndex===0||$ctrl.currentIndex)", ng-click="$ctrl.delete()")
-                    input.btn.btn-default.btn-crud(type="button", value="Сброс", ng-click="$ctrl.clear()")
+                li.form-buttons
+                    input.btn.btn-default(type="submit", value="Добавить", ng-disabled="currentForm.$invalid||currentForm.$pristine", ng-click="$ctrl.add()")
+                    input.btn.btn-default(type="button", value="Изменить", ng-disabled="currentForm.$invalid||!$ctrl.currentIndex", ng-click="$ctrl.edit()")
+                    input.btn.btn-default(type="button", value="Удалить", ng-disabled="!($ctrl.currentIndex===0||$ctrl.currentIndex)", ng-click="$ctrl.delete()")
+                    input.btn.btn-default(type="button", value="Сброс", ng-click="$ctrl.clear()")
+        .alert.alert-success(role="alert", ng-show="$ctrl.messages['added']") Торговая точка добавлена!
+        .alert.alert-success(role="alert", ng-show="$ctrl.messages['edited']") Торговая точка изменена!
+        .alert.alert-success(role="alert", ng-show="$ctrl.messages['deleted']") Торговая точка удалена!
