--- a/app/map/map.template.pug
+++ b/app/map/map.template.pug
@@ -3,9 +3,13 @@
     a.header-logout.btn.btn-default(ng-click="$ctrl.logout()") Выход
 .main
     .svg-wrapper
-        svg#SVG
-        object#svgMap(data="map/tutzing.svg", type="image/svg+xml")
+        svg#canvas
+        #map
     .form-wrapper
+        .container-fluid.form-header
+           .alert.alert-success(role="alert", ng-show="$ctrl.messages['added']") Торговая точка добавлена!
+           .alert.alert-success(role="alert", ng-show="$ctrl.messages['edited']") Торговая точка изменена!
+           .alert.alert-success(role="alert", ng-show="$ctrl.messages['deleted']") Торговая точка удалена!
         form(name="currentForm", novalidate="")
             ul.form-container
                 li
@@ -25,6 +29,3 @@
                     input.btn.btn-default(type="button", value="Изменить", ng-disabled="currentForm.$invalid||!$ctrl.currentIndex", ng-click="$ctrl.edit()")
                     input.btn.btn-default(type="button", value="Удалить", ng-disabled="!($ctrl.currentIndex===0||$ctrl.currentIndex)", ng-click="$ctrl.delete()")
                     input.btn.btn-default(type="button", value="Сброс", ng-click="$ctrl.clear()")
-        .alert.alert-success(role="alert", ng-show="$ctrl.messages['added']") Торговая точка добавлена!
-        .alert.alert-success(role="alert", ng-show="$ctrl.messages['edited']") Торговая точка изменена!
-        .alert.alert-success(role="alert", ng-show="$ctrl.messages['deleted']") Торговая точка удалена!
